--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 ﻿/* global */
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Courier New');
 
 .grid-2{
     display: grid;
     grid-template-columns: repeat(2,1fr);
 }
 
-body{
+.body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
@@ -15,7 +16,7 @@ body{
 
 }
 
-h3,.white{
+.h3{
     color: #fff;
     font-family: 'Courier New', monospace;
 }
