--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     grid-template-columns: repeat(2,1fr);
 }
 
-.body{
+body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
@@ -16,7 +16,7 @@
 
 }
 
-.h3{
+h3{
     color: #fff;
     font-family: 'Courier New', monospace;
 }
