--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@
     grid-template-columns: repeat(2,1fr);
 }
 
+.header {
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
+
 body{
     margin: 0;
     padding: 0;
