--- a/style.css
+++ b/style.css
@@ -8,11 +8,9 @@
 }
 
 .header {
-  padding: 60px;
   text-align: center;
-  background: #1abc9c;
+  background: #008080;
   color: white;
-  font-size: 30px;
 }
 
 body{
