--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    background-image: background1.jpeg;
     background-color: #101214;
     color: #7A7C80;
 
